--- a/vertlin-support-boot/build.gradle
+++ b/vertlin-support-boot/build.gradle
@@ -10,5 +10,6 @@ dependencies {
     api "io.vertx:vertx-lang-kotlin:$vertxVersion"
     api "io.vertx:vertx-lang-kotlin-coroutines:$vertxVersion"
 
-    implementation 'ch.qos.logback:logback-classic:1.2.11'
+    implementation "ch.qos.logback:logback-classic:1.2.11"
+    implementation "com.moandjiezana.toml:toml4j:0.7.2"
 }
