--- a/vertlin-boot/build.gradle
+++ b/vertlin-boot/build.gradle
@@ -1,5 +1,3 @@
-
-
 repositories {
     mavenLocal()
     mavenCentral()
@@ -11,7 +9,6 @@ dependencies {
     api "io.vertx:vertx-core:$vertxVersion"
     api "io.vertx:vertx-lang-kotlin:$vertxVersion"
     api "io.vertx:vertx-lang-kotlin-coroutines:$vertxVersion"
-
-    implementation "ch.qos.logback:logback-classic:1.2.11"
+    api "ch.qos.logback:logback-classic:1.2.11"
     implementation "com.moandjiezana.toml:toml4j:0.7.2"
 }
