--- a/vertlin-projects/just-dav/build.gradle
+++ b/vertlin-projects/just-dav/build.gradle
@@ -1,5 +1,14 @@
+plugins {
+    id "io.vertx.vertx-plugin" version "1.3.0"
+}
+
 dependencies {
     implementation project(":vertlin-boot")
     implementation project(":vertlin-ext:vertlin-ext-web")
     implementation "org.dom4j:dom4j:2.1.3"
+}
+
+vertx {
+    mainVerticle = "sample.MainVerticle"
+    launcher = "xyz.scootaloo.vertlin.dav.Launcher"
 }
