--- a/vertlin-projects/hello-world/build.gradle
+++ b/vertlin-projects/hello-world/build.gradle
@@ -1,4 +1,13 @@
+plugins {
+    id "io.vertx.vertx-plugin" version "1.3.0"
+}
+
 dependencies {
     implementation project(":vertlin-boot")
     implementation project(":vertlin-ext:vertlin-ext-web")
+}
+
+vertx {
+    mainVerticle = "sample.MainVerticle"
+    launcher = "xyz.scootaloo.vertlin.hello.Launcher"
 }
