--- a/vertlin-projects/just-dav/build.gradle
+++ b/vertlin-projects/just-dav/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "io.vertx.vertx-plugin" version "1.3.0"
+    id("org.springframework.boot") version "2.7.2"
 }
 
 dependencies {
@@ -8,7 +8,7 @@ dependencies {
     implementation "org.dom4j:dom4j:2.1.3"
 }
 
-vertx {
-    mainVerticle = "sample.MainVerticle"
-    launcher = "xyz.scootaloo.vertlin.dav.Launcher"
+bootJar {
+    // https://www.docs4dev.com/docs/en/spring-boot/1.5.9.RELEASE/reference/build-tool-plugins-gradle-plugin.html#build-tool-plugins-gradle-packaging
+    mainClass = "xyz.scootaloo.vertlin.dav.Launcher"
 }
