--- a/vertlin-boot/build.gradle
+++ b/vertlin-boot/build.gradle
@@ -9,7 +9,10 @@ dependencies {
     api "io.vertx:vertx-core:$vertxVersion"
     api "io.vertx:vertx-lang-kotlin:$vertxVersion"
     api "io.vertx:vertx-lang-kotlin-coroutines:$vertxVersion"
-    api "ch.qos.logback:logback-classic:1.2.11"
+
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'ch.qos.logback:logback-core:1.2.11'
+    implementation 'ch.qos.logback:logback-classic:1.2.11'
 
     implementation "com.moandjiezana.toml:toml4j:0.7.2"
 }
